Task-58612: [Accessibility - Contrast C3.2 - Stream Page] Fix contrast problem for all "little" texts

--- a/layout-management-webapps/src/main/webapp/skin/navigation/webui/component/DefaultStylesheet.css
+++ b/layout-management-webapps/src/main/webapp/skin/navigation/webui/component/DefaultStylesheet.css
@@ -276,7 +276,7 @@
 }
 .uiManagementSite .nothingEditable {
   font-weight: bold;
-  color: #999999;
+  color: #767676;
 }
 .uiManagementSite .nothingEditable + .uiAction {
   margin-top: 20px;
